src/main/java/ctl/parser/grammar
Formula             =           DoubleImplication

DoubleImplication   =           Implication { '<->' Implication }

Implication         =           Expression { '->' Expression }

Expression          =           Term { '|' Term }

Term                =           Factor { '&' Factor }

Factor              =           '!' Factor
                    |           Atom

Atom                =           Temporal
                    |           Constant
                    |           '(' Formula ')'
                    |           Action

Temporal            =           'E' | 'A' ('X' | 'F' | 'G' | ('(' Formula 'U' Formula ')') Formula)

Action              =           \Regex: [a-z][a-z0-9]*

Constant            =           'false' | 'true' | '0' | '1'
